welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:4: error: type mismatch;
 found   : Int
 required: String
     else{if(a%3==0){return "Buzz"}else{return a}
                                               ^